App.js - cleaned up redundant variables and comments; Product.js/.css - Implemented scrolling marquee for incompletely displayed product names when user hovers over them; ProductList.js/css - Attempted to fix inadequate responsive display on mobile devices for filter buttons, and changed Product component display from 5 per row to 4; ProductMetrics.js - fixed broken API endpoints from previous code merge; Dash.js - updated props

--- a/src/product/Product.css
+++ b/src/product/Product.css
@@ -23,6 +23,30 @@ input{
     font-weight: bold;
 }
 
-.select-text {
-    font-weight: bolder;
-}
+
+#marquee {
+    --gap: 1rem;
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    user-select: none;
+    gap: var(--gap);
+  }
+  
+  #marquee__content {
+    animation: marquee 10s linear infinite;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: space-around;
+    gap: var(--gap);
+    min-width: 100%;
+  }
+    
+    @keyframes marquee {
+    10% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
