--- a/src/product/ProductList.css
+++ b/src/product/ProductList.css
@@ -140,9 +140,17 @@ justify-content: center;
     
   }
 
-  .filter {
-    margin-left: 1em;
-    margin-right: 1em;
+  .filter-flex-container {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+  }
+
+  .filter-container {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
 }
